display instead of visibility

--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -77,9 +77,9 @@
             {% include 'closeBoxedSection.html' %}
             <br>
             <button type="submit">Erstellen</button>
-            <div class="message" style="visibility: hidden;">
+            <div class="message" style="display: none;">
                 <p></p>
-                <button class="copy-link" onclick="copyAddUserMessageLink(event);" style="visibility: hidden;">
+                <button class="copy-link" onclick="copyAddUserMessageLink(event);" style="display: none;">
                     <span class="material-symbols-outlined">
                         content_copy
                     </span>
