no submit on copy

--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -79,7 +79,7 @@
             <button type="submit">Erstellen</button>
             <div class="message" style="display: none;">
                 <p></p>
-                <button class="copy-link" onclick="copyAddUserMessageLink(event);" style="display: none;">
+                <button class="copy-link" onclick="copyAddUserMessageLink(event);" style="display: none;" type="button">
                     <span class="material-symbols-outlined">
                         content_copy
                     </span>
