--- a/api/templates/boxedSectionHead.html
+++ b/api/templates/boxedSectionHead.html
@@ -11,28 +11,32 @@
     margin: 4px;
 }
 .boxed-section-button {
-  border: none;
-  background: inherit;
-  width: min-content;
-  height: min-content;
-  aspect-ratio: 1/1;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  padding: 0;
-  user-select: none;
-  cursor: pointer;
+    border: none;
+    background: inherit;
+    width: min-content;
+    height: min-content;
+    aspect-ratio: 1/1;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    padding: 0;
+    user-select: none;
+    cursor: pointer;
 }
 .material-symbols-outlined {
-  font-variation-settings:
-  'FILL' 0,
-  'wght' 400,
-  'GRAD' 0,
-  'opsz' 24
+    font-variation-settings:
+    'FILL' 0,
+    'wght' 400,
+    'GRAD' 0,
+    'opsz' 24
 }
 </style>
 <script>
-function handleBoxedSectionOpenerButton(event) {
+boxedSectionOpenButtonsClicked = [];
+function handleBoxedSectionOpenerButton(event, onFirstOpen) {
+    if (!boxedSectionOpenButtonsClicked.includes(event.target) && onFirstOpen) {
+        onFirstOpen();
+    }
     event.target.parentNode.style.display = "none";
     event.target.parentNode.parentNode.firstElementChild.style.display = "";
     console.log(event);
