--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -10,88 +10,7 @@
         {% include 'boxedSectionHead.html' %}
         Eingeloggt als {{ session.username }}.
         <button id="logout-button">Ausloggen</button>
-        {% if Settings._CREATE_MEMBERS in session.settings %}
-        <style>
-        input {
-            border-color: darkgray;
-            border-style: solid;
-            border-width: 1px;
-            border-radius: 4px;
-            margin-top: 2px;
-            margin-bottom: 2px;
-        }
-        input:focus {
-            outline: none;
-            border-color: black;
-        }
-
-        .settings-box label {
-            border-width:1px;
-            border-style: solid;
-            border-color: lightgray;
-            border-radius: 4px;
-            padding:5px;
-            display: block;
-            user-select: none;
-        }
-
-        .settings-box label:hover {
-            background:#eee;
-            cursor:pointer;
-        }
-
-        .copy-link {
-            border-radius: 4px;
-            border-style: none;
-            background-color: darkblue;
-            color: white;
-            cursor: pointer;
-        }
-        .copy-link .material-symbols-outlined {
-            vertical-align: sub;
-        }
-        .copy-link .copy-link-text {
-            vertical-align: super;
-        }
-        </style>
-        {% include 'openBoxedSection.html' %}
-        <form id="addUserForm">
-            <label for="username">Temporärer Nutzername:</label>
-            <input type="text" id="username" name="username" required>
-            <br>
-            <label for="pgroup">Berechtigungsgruppe:</label>
-            <input type="number" id="pgroup" name="pgroup" value="{{ session.permission_group - 1 }}" max="{{ session.permission_group - 1 }}" required>
-            <br>
-            <label>Einstellungen/Berechtigungen:</label>
-            {% include 'openBoxedSection.html' %}
-            <div class="settings-box">
-            {% for setting in Settings.__members__.values() %}
-                {% if setting in session.settings and not setting.name.startswith("_") and setting.name != "NONE" %}
-                <label>
-                    <input name="setting_{{ setting.name }}" id="setting_{{ setting.name }}" type="checkbox">
-                    {{ setting.get_translated_name() }}
-                </label>
-                {% endif %}
-            {% endfor %}
-            </div>
-            {% include 'closeBoxedSection.html' %}
-            <br>
-            <button type="submit">Erstellen</button>
-            <div class="message" style="display: none;">
-                <p></p>
-                <button class="copy-link" onclick="copyAddUserMessageLink(event);" style="display: none;" type="button">
-                    <span class="material-symbols-outlined">
-                        content_copy
-                    </span>
-                    <span class="copy-link-text">Copy link</span>
-                </button>
-            </div>
-        </form>
-        {% include 'closeBoxedSection.html' %}
-        {% endif %}
-        <script>
-            {% include 'homeCode.js' %}
-        </script>
+        <a href="{{ url_for('control_panel') }}"><button type="button">Kontrollpanel</button></a>
         {% endif %}
     </body>
 </html>
