--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -10,6 +10,7 @@
         Eingeloggt als {{ session.username }}.
         <button id="logout-button">Ausloggen</button>
         <a href="{{ url_for('control_panel') }}"><button type="button">Kontrollpanel</button></a>
+        {% include 'homeCode.js' %}
         {% endif %}
     </body>
 </html>
