--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -106,6 +106,7 @@
         <style>
             #userList ul {
                 margin: 0;
+                padding-left: 24px;
             }
             #userList th {
                 text-align: left;
