--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -6,6 +6,8 @@
         Kontrollpanel
         </title>
         {{ boxedSections.sectionHead() }}
+        <link rel="manifest" href="manifest" />
+
     </head>
     <body>
         <a href="{{ url_for('home') }}"><button type="button">Zurück zum Hauptmenu</button></a>
