--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>Home</title>
+        <link rel="manifest" href="manifest" />
     </head>
     <body>
         {% if not session %}
