--- a/api/templates/register.html
+++ b/api/templates/register.html
@@ -2,6 +2,8 @@
 <html>
     <head>
         <title>Register</title>
+        <link rel="manifest" href="manifest" />
+
     </head>
     <body>
         <style>
