--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -7,7 +7,7 @@
         </title>
         {{ boxedSections.sectionHead() }}
         <link rel="manifest" href="manifest" />
-
+        <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
     </head>
     <body>
         <a href="{{ url_for('home') }}"><button type="button">Zurück zum Hauptmenu</button></a>
