--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -3,6 +3,7 @@
     <head>
         <title>Home</title>
         <link rel="manifest" href="manifest" />
+        <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
     </head>
     <body>
         {% if not session %}
