--- a/api/templates/register.html
+++ b/api/templates/register.html
@@ -3,7 +3,7 @@
     <head>
         <title>Register</title>
         <link rel="manifest" href="manifest" />
-
+        <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
     </head>
     <body>
         <style>
