--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -6,15 +6,36 @@
         <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
     </head>
     <body>
-        {% if not session %}
-        {% include 'login.html' %}  
-        {% else %}
-        Eingeloggt als {{ session.username }}.
-        <button id="logout-button">Ausloggen</button>
-        <a href="{{ url_for('control_panel') }}"><button type="button">Kontrollpanel</button></a>
-        <script>
-            {% include 'homeCode.js' %}
-        </script>
-        {% endif %}
+        <div id="container">
+            <div id="home-content">
+                {% if not session %}
+                {% include 'login.html' %}  
+                {% else %}
+                <style>
+                #home-content {
+                    text-align: center;
+                    border-style: solid;
+                    border-width: 2px;
+                    border-radius: 4px;
+                    border-color: darkgray;
+                }
+                #home-content * {
+                    margin: 4px;
+                }
+                #container {
+                    display: grid;
+                    justify-content: center;
+                }
+            </style>
+                <p>Eingeloggt als {{ session.username }}.</p>
+                <button id="logout-button">Ausloggen</button>
+                <br>
+                <a href="{{ url_for('control_panel') }}"><button type="button">Kontrollpanel</button></a>
+                <script>
+                    {% include 'homeCode.js' %}
+                </script>
+                {% endif %}
+            </div>
+        </div>
     </body>
 </html>
