--- a/api/templates/home.html
+++ b/api/templates/home.html
@@ -30,6 +30,7 @@
                 <p>Eingeloggt als {{ session.username }}.</p>
                 <button id="logout-button">Ausloggen</button>
                 <a href="{{ url_for('control_panel') }}"><button type="button">Kontrollpanel</button></a>
+                <a href="https://leanderkafemann.github.io/LK-Regeln/">Abstimmungsregeln</a>
                 <script>
                     {% include 'homeCode.js' %}
                 </script>
