--- a/api/templates/login.html
+++ b/api/templates/login.html
@@ -1,4 +1,7 @@
 <style>
+    html {
+        font-family: Verdana, sans-serif;
+    }
     .login-box {
         display: grid;
         justify-content: center;
