--- a/api/templates/register.html
+++ b/api/templates/register.html
@@ -8,6 +8,9 @@
 </head>
     <body>
         <style>
+            html {
+                font-family: Verdana, sans-serif;
+            }
             .signup-box {
                 display: grid;
                 justify-content: center;
