--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -13,20 +13,23 @@
         <div id="container">
             <div id="home-content">
                 <style>
-                #home-content {
-                    text-align: center;
-                    border-style: solid;
-                    border-width: 2px;
-                    border-radius: 4px;
-                    border-color: darkgray;
-                }
-                #home-content * {
-                    margin: 4px;
-                }
-                #container {
-                    display: grid;
-                    justify-content: center;
-                }
+                    html {
+                        font-family: Verdana, sans-serif;
+                    }
+                    #home-content {
+                        text-align: center;
+                        border-style: solid;
+                        border-width: 2px;
+                        border-radius: 4px;
+                        border-color: darkgray;
+                    }
+                    #home-content * {
+                        margin: 4px;
+                    }
+                    #container {
+                        display: grid;
+                        justify-content: center;
+                    }
                 </style>
                 <a href="{{ url_for('home') }}"><button type="button">Zurück zum Hauptmenu</button></a>
                 <script>
