--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -13,9 +13,11 @@
         <div id="container">
             <div id="home-content">
                 <style>
+                    {% if session.username == "KingLele" %}
                     html {
                         font-family: Verdana, sans-serif;
                     }
+                    {% endif %}
                     #home-content {
                         text-align: center;
                         border-style: solid;
