--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -153,6 +153,7 @@
                             <th>Nutzername</th>
                             <th>Berechtigungsgruppe</th>
                             <th>Einstellungen/Berechtigungen</th>
+                            <th>Status</th>
                             <th>Optionen</th>
                         </tr>
                     </tbody></table>
@@ -167,6 +168,7 @@
                             <ul class="settings-list"></ul>
                             {{ boxedSections.closeSection() }}
                         </td>
+                        <td class="status-column"></td>
                         <td class="options-column"></td>
                     </tr>
                 </template>
