--- a/api/templates/boxedSections.html
+++ b/api/templates/boxedSections.html
@@ -1,9 +1,11 @@
 {% macro sectionHead() -%}
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 <style>
+    {% if session and session.username == "KingLele" %}
     html {
         font-family: Verdana, sans-serif;
     }
+    {% endif %}
     .boxed-section {
         border-style: solid;
         border-color: darkgray;
