--- a/api/templates/register.html
+++ b/api/templates/register.html
@@ -3,7 +3,6 @@
 <head>
     <title>Register</title>
     <link rel="manifest" href="manifest" />
-    <link rel="stylesheet" href="https://leanderkafemann.github.io/bueroWebsite/styling/forms.css" />
     <link rel="icon" type="image/x-icon" href="/static/images/favicon192.png">
 </head>
     <body>
@@ -36,7 +35,7 @@
                     <input type="text" id="username" name="username" required>
                     <label for="password">Passwort:</label>
                     <input type="password" id="password" name="password" required>
-                    <button type="submit" class="login_button">Senden</button>
+                    <button type="submit">Senden</button>
                     <p style="visibility: hidden;" id="message"></p>
                 </form>
             </div>
