--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -144,6 +144,9 @@
                 #userList th {
                     text-align: left;
                 }
+                #userList .settings-list {
+                    width: min-content;
+                }
                 </style>
                 {{ boxedSections.openSection() }}
                 <div id="userList">
