--- a/api/templates/controlPanel.html
+++ b/api/templates/controlPanel.html
@@ -116,7 +116,7 @@
                     </div>
                     {{ boxedSections.closeSection() }}
                     <br>
-                    <button type="submit">Erstellen</button>
+                    <button class="login_button" type="submit">Erstellen</button>
                     <div class="message" style="display: none;">
                         <p></p>
                         <button class="copy-link" onclick="copyAddUserMessageLink(event);" style="display: none;" type="button">
@@ -176,7 +176,7 @@
                     </tr>
                 </template>
                 <template id="user-table-option-button-template">
-                    <button type="button" class="user-table-option-button"></button>
+                    <button class="login_button" type="button" class="user-table-option-button"></button>
                 </template>
                 <script>
                     {% include 'userList.js' %}
